--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="error_field_required">Este campo es requerido</string>
     <string name="no_found">Servicio no disponible por el momento.</string>
     <string name="bloqueo">El número de empleado esta bloqueado, inténtelo más tarde.</string>
+    <string name="Total">Total</string>
 
     <string name="home">Recibos</string>
     <string name="ahorro">Ahorro</string>
@@ -23,10 +24,30 @@
     <string name="closeDrawer">Navigation View</string>
     <string name="openDrawer">Navigation View Closed</string>
 
+    <!--Prenomina Card-->
+    <string name="entrada">Entrada</string>
+    <string name="salida">Salida</string>
+    <string name="horas">Ordinarias</string>
+    <string name="extras">Extras</string>
+    <string name="totalhoras">Horas</string>
+
+    <!--Ahorro Encabezado-->
+    <string name="ahorInicio">Inicio:</string>
+    <string name="ahorRetiro">Retiro:</string>
+    <string name="ahorRetPer">Descuento:</string>
+    <string name="ahorAhorroTotal">Ahorrado:</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="ult_nomi_header">Recibos de Nóminas</string>
-    <string name="sub_total">Sub Total:</string>
-    <string name="vales">Vales:</string>
-    <string name="neto">Neto:</string>
+    <string name="ult_nomi_header">Resumen de Nóminas</string>
+    <string name="sub_total">Sub Total</string>
+    <string name="Deposito">Deposito</string>
+    <string name="vales">Vales</string>
+    <string name="neto">Neto</string>
+
+    <!--Titulos d Actividades -->
+    <string name="title_activity_nomina">Nómina</string>
+    <string name="title_activity_recibos">Recibos</string>
+    <string name="title_activity_prenomina">Pre Nómina</string>
+    <string name="title_activity_ahorro">Ahorro</string>
 </resources>
